--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.10.6",
     "mongoose-currency": "^0.2.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "session-file-store": "^1.4.0"
   }
 }
